# les_iterables

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: actions.yml
docs/: docs-requirements.txt
docs/source/: conf.py  contents.rst
source/les_iterables/: __init__.py  augmenting.py  combining.py  functions.py  parsing.py  searching.py  selecting.py  test_offset_iterators.py
src/les_iterables/: __init__.py  augmenting.py  combining.py  functions.py  generating.py  grouping.py  parsing.py  searching.py  selecting.py  sentinels.py  sequences.py  version.py
tests/: .coveragerc  test_sequences.py
tests/augmenting/: test_separate_with.py
tests/combining/: test_flatten.py  test_join_with.py
tests/generating/: test_generate.py  test_one.py
tests/grouping/: test_complete_chunks.py  test_group_by_terminator.py  test_pairwise_padded.py  test_partition.py  test_partition_tail.py  test_split_after_first.py  test_split_around.py
tests/helpers/: predicates.py
tests/parsing/: test_expand_numbered_list.py  test_range_from_text.py
tests/searching/: test_duplicates.py  test_edge_index.py  test_run_delimited_range.py
tests/selecting/: test_element_at.py  test_preceding.py  test_previous.py  test_reject_if.py  test_reject_if_none.py  test_relative_to.py  test_retain_falsy.py  test_retain_if.py  test_retain_if_not_none.py  test_retain_truthy.py  test_single.py  test_skip_while.py  test_succeeding.py  test_take_after_exclusive.py  test_take_before_exclusive.py  test_take_before_inclusive.py  (+9 more)
(+10 files in other folders)
