[build-system]
build-backend = 'setuptools.build_meta'
# Minimum requirements for the build system to execute.
requires = ["setuptools"]  # PEP 508 specifications.

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
norecursedirs="tests/helpers"

[tool.black]
line-length = 100
target-version = ['py39']
