[metadata]
name = les_iterables
version = attr: les_iterables.version.__version__
description = Iterable processing functions
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sixty-north/venv-management
author = Sixty North AS
author_email: systems+les_iterables@sixty-north.com
keywords = iterators iterables
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:
install_requires = more-itertools

[options.extras_require]
dev = bumpversion
doc = sphinx ; sphinx_rtd_theme ; better_apidoc
test = pytest ; coverage ; pytest-cov ; hypothesis; tox

[options.packages.find]
where = src
